# ebolg

./: .gitignore  Cargo.toml  README.html  README.md  flake.nix  index.html  package-lock.json  py.html  py.md  shell.nix
docs/: README.md
example/: index.md
example/style/: tailwind.css
src/: main.rs
