[package]
name = "ebolg"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontmatter = "0.4.0"
pulldown-cmark = "0.9.6"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8" # For parsing YAML
